--- a/README.Rmd
+++ b/README.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
-# KetnipzR
+
+# KetnipzR <img src="hexketnipz.png" width="240px" align="right" /> 
 
 <!-- badges: start -->
 ![R-CMD-check](https://github.com/lucassxs/KetnipzR/actions/workflows/check-release.yaml/badge.svg)
-
 <!-- badges: end -->
 
 The goal of KetnipzR is to ...
